--- a/index.html
+++ b/index.html
@@ -19,17 +19,9 @@
       content="Master web security vulnerabilities with interactive labs, real-world scenarios, and step-by-step guidance."
     />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:image"
-      content="https://lovable.dev/opengraph-image-p98pqg.png"
-    />
+    <link rel="icon" href="/favicon.ico" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta
-      name="twitter:image"
-      content="https://lovable.dev/opengraph-image-p98pqg.png"
-    />
   </head>
 
   <body>
